# Code.editor

./: CMakeLists.txt  README.md  main.cpp
src/: lsp_client.h
src/core/: main_app.cpp  main_app.h
src/editor/: text_editor.cpp  text_editor.h
src/language_support/: syntax_highlighter.h
src/language_support/c-cpp/: cpp_highlighter.cpp  cpp_highlighter.h
src/ui/android/: main_activity.java  main_window.cpp
src/ui/desktop/: main_window.cpp
src/utils/: file_io.cpp  file_io.h
